redirects for netlify

--- a/angular.json
+++ b/angular.json
@@ -17,12 +17,13 @@
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
-              "zone.js"
+              "zone.js"so
             ],
-            "tsConfig": "tsconfig.app.json",
+            "tsConfig": "tsconfig.app.jn",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
