--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
-              "zone.js"so
+              "zone.js"
             ],
             "tsConfig": "tsconfig.app.jn",
             "assets": [
